# klai

./: .env.dev.example  .gitignore  .gitleaks.toml  .gitmodules  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  NOTICES.md  README.md  TRUST5_VALIDATION_REPORT.md  TRUST_VALIDATION_REPORT_SPEC_KNOW_004.md  clone.html  dev.md  docker-compose.dev.yml  integrations-after-policy-fix.md  middleware.ts  next.config.ts  package-lock.json  package.json  relace-full-source.html  renovate.json  sgconfig.yml  snapshot-after-first-click.md  styleguide.html
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: d64fdcfecf32_create_portal_orgs_and_portal_users.py  f6a7b8c9d0e1_slim_portal_users_remove_identity_fields.py  g7h8i9j0k1l2_add_role_to_portal_users.py  h8i9j0k1l2m3_fix_role_default_to_member.py  i9j0k1l2m3n4_add_preferred_language_to_portal_users.py  k1l2m3n4o5p6_add_mfa_policy_to_portal_orgs.py  l2m3n4o5p6q7_add_litellm_team_key_to_portal_orgs.py
backend/app/: main.py
backend/app/api/: admin.py  auth.py  billing.py  internal.py  me.py  signup.py  webhooks.py
backend/app/core/: config.py  database.py
backend/app/models/: base.py  portal.py
backend/app/services/: moneybird.py  provisioning.py  zitadel.py
deploy/klai-knowledge-mcp/: Dockerfile  agent-system-prompt.md  logging_setup.py  main.py  pyproject.toml  requirements.txt
deploy/klai-knowledge-mcp/tests/: test_mcp_security.py
deploy/klai-mailer/: README.md  pyproject.toml
deploy/klai-mailer/app/: logging_setup.py  main.py  models.py
deploy/klai-mailer/theme/: email.html.j2
deploy/knowledge-ingest/: Dockerfile  pyproject.toml  requirements.txt
deploy/knowledge-ingest/knowledge_ingest/: app.py  chunker.py  config.py  content_profiles.py  context_strategies.py  crawl_tasks.py  embedder.py  enrichment.py  enrichment_tasks.py  graph.py  ingest_tasks.py  kb_config.py  models.py  pg_store.py  qdrant_store.py  sparse_embedder.py
deploy/knowledge-ingest/tests/: conftest.py  test_adapters_scribe_chunking.py  test_assertion_mode_taxonomy.py  test_auth_middleware.py  test_content_profiles.py  test_context_strategies.py  test_enrichment.py  test_enrichment_context_strategy.py  test_enrichment_dedup.py  test_graph.py  test_ingest_content_hash_dedup.py  test_ingest_debounce.py  test_ingest_enrichment_dedup.py  test_knowledge_fields.py  test_org_config.py  test_pg_store.py  (+4 more)
klai-connector/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
klai-connector/alembic/: env.py
klai-connector/app/: main.py
klai-connector/tests/: test_audit_2026_04_b2.py  test_auth_middleware_cache.py  test_auth_middleware_sec008.py  test_compute_fingerprint.py  test_confluence_ssrf_legacy.py  test_connector_rate_limit.py  test_connector_routes_not_found.py  test_cors_middleware_order.py  test_e2e_image_pipeline.py  test_image_utils.py  test_integration_ms_docs.py  test_knowledge_ingest_payload.py  test_migration_005.py  test_migration_006.py  test_migration_007.py  test_parser_images.py  test_ruff_config.py  test_s3_storage.py  test_sec_internal_001.py  test_sync_engine_canary.py  test_sync_engine_images.py  test_sync_engine_layer_c.py  test_sync_engine_product_events.py  test_sync_engine_reconnect.py  test_sync_engine_web_delegation.py  test_sync_routes_org_scoping.py  test_sync_run_model.py  test_web_crawler_ssrf_legacy.py
klai-focus/research-api/: .env.example  Dockerfile  entrypoint.sh  pyproject.toml
klai-knowledge-mcp/: Dockerfile  agent-system-prompt.md  main.py  pyproject.toml
klai-knowledge-mcp/tests/: conftest.py  test_assertion_mode_taxonomy.py  test_identity_assert.py  test_mcp_hygiene.py  test_mcp_security.py  test_page_path_validation.py  test_personal_kb_annotation.py  test_sec_internal_001.py
klai-libs/connector-credentials/: README.md  pyproject.toml
klai-libs/identity-assert/: README.md  pyproject.toml
klai-libs/image-storage/: README.md  pyproject.toml
klai-libs/log-utils/: README.md  pyproject.toml
klai-mailer/: Dockerfile  README.md  pyproject.toml
klai-mailer/app/: config.py  logging_setup.py  mailer.py  main.py  models.py  nonce.py  portal_client.py  rate_limit.py  redis_url.py  renderer.py  schemas.py  signature.py
klai-mailer/tests/: _signing.py  conftest.py  test_config_fail_closed.py  test_debug_gate.py  test_internal_send_auth.py  test_internal_send_golden.py  test_internal_send_rate_limit.py  test_internal_send_recipient.py  test_internal_send_sandbox.py  test_logging_setup.py  test_notify_error_taxonomy.py  test_notify_replay.py  test_redis_url.py
klai-mailer/zitadel-message-texts/: en.yaml  nl.yaml
klai-portal/backend/: .env.example  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
klai-retrieval-api/: Dockerfile  pyproject.toml
klai-retrieval-api/evaluation/: eval_config.yaml  eval_runner.py  test_queries_curated.json
klai-retrieval-api/retrieval_api/: config.py  logging_setup.py  main.py  metrics.py  models.py  quality_boost.py
klai-retrieval-api/scripts/: generate_gate_reference.py
klai-retrieval-api/tests/: conftest.py  test_api.py  test_assertion_mode_taxonomy.py  test_auth.py  test_auth_jwks_timeout.py  test_cors_presence.py  test_diversity.py  test_eval_framework.py  test_events_bounded.py  test_evidence_pipeline.py  test_evidence_tier.py  test_health_safety.py  test_identity_assert.py  test_link_expand_config.py  test_link_expand_retrieve.py  test_link_expand_search.py  test_notebook_filter.py  test_payload_util.py  test_quality_boost.py  test_rate_limit_annotation.py  test_request_id_validation.py  test_reranker.py  test_router.py  test_search.py  test_search_error_handling.py  test_source_ip_xff_spoof.py  test_synthesis.py  test_taxonomy_filter.py
klai-scribe/scribe-api/: .env.example  Dockerfile  entrypoint.sh  pyproject.toml
portal/backend/: Dockerfile  pyproject.toml  pyrightconfig.json
research-api/: .env.example  Dockerfile  pyproject.toml
research-api/app/: main.py
scribe/whisper-server/: logging_setup.py  main.py  pyproject.toml
(+2547 files in other folders)
