[project]
name = "klai-connector"
version = "0.1.0"
description = "External source connectors for Klai Knowledge via Unstructured.io"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.7.0",
    "unstructured>=0.16.0",
    "httpx[http2]>=0.28.0",
    "apscheduler>=3.10.0",
    "cryptography>=44.0.0",
    "gidgethub>=5.3.0",
    "PyJWT[crypto]>=2.9.0",
    "structlog>=25.0",
    "notion-sync-lib @ git+https://github.com/mvletter/notion-sync-lib.git",
    "minio>=7.2.0",
    "filetype>=1.2.0",
    "msal>=1.31",
    "trafilatura>=2.0,<3.0",
    "klai-connector-credentials",
    "klai-image-storage",
]

[tool.uv.sources]
klai-connector-credentials = { path = "../klai-libs/connector-credentials", editable = true }
klai-image-storage = { path = "../klai-libs/image-storage", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "G", "LOG"]
ignore = ["B008"]  # Depends() in FastAPI endpoint defaults is standard pattern

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
]
