[project]
name = "klai-mailer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "aiosmtplib>=3.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "structlog>=25.0",
    "redis>=5.0",
    "email-validator>=2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "fakeredis>=2.24",
    "respx>=0.21",
    "lxml>=5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "RUF", "G", "LOG"]
ignore = [
    "S101",  # assert is fine in tests
    "S105",  # hardcoded passwords — too many false positives on config defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S106", "S311"]  # test secrets + non-crypto random are fine

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
]
