[project]
name = "retrieval-api"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "qdrant-client>=1.12",
    "sse-starlette>=2.1",
    "graphiti-core[falkordb]>=0.28,<0.29",
    "structlog>=25.0",
    "prometheus-client>=0.21",
    "asyncpg>=0.30",
    # SPEC-SEC-010 — Zitadel JWT validation (matches research-api) + Redis sliding-window rate limiter.
    "python-jose[cryptography]>=3.3",
    "redis>=5.0",
    # SPEC-SEC-IDENTITY-ASSERT-001 REQ-4 (Phase D): re-verify internal-secret
    # callers' body identity against portal-api. Editable install — same
    # pattern as klai-knowledge-mcp (Phase B) and klai-knowledge-ingest.
    "klai-identity-assert",
]

[tool.uv.sources]
klai-identity-assert = { path = "../klai-libs/identity-assert", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
    "pytest-cov>=7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# SPEC-SEC-HYGIENE-001 REQ-43.4: TRY rules added so future regressions of
# `logger.error(...)` inside `except` (TRY400) or `error=str(exc)`-style
# traceback dropping (TRY401) are caught in CI.
select = ["E", "F", "I", "UP", "B", "S", "RUF", "G", "LOG", "TRY"]
ignore = [
    "S101",  # assert is fine in tests
    "S105",  # hardcoded passwords — too many false positives on config defaults
    "TRY003",  # raise-vanilla-args — too noisy for our HTTPException patterns
    "TRY300",  # try-consider-using-else — stylistic, not a safety issue
    "TRY301",  # raise-within-try — needed when wrapping/translating exceptions
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
