[project]
name = "research-api"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "qdrant-client>=1.12",
    "alembic>=1.14",
    "python-multipart>=0.0.12",
    "python-ulid>=3.0",
    "tiktoken>=0.8",
    "youtube-transcript-api>=0.6",
    "sse-starlette>=2.1",
    "structlog>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "RUF", "G", "LOG"]
ignore = [
    "S101",   # assert is fine in tests
    "S105",   # hardcoded passwords — too many false positives on config defaults
    "B008",   # FastAPI Depends() in function defaults is the intended pattern
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
