[project]
name = "klai-image-storage"
version = "0.1.0"
description = "Shared content-addressed image storage (Garage S3) for Klai services (SPEC-KB-IMAGE-002)."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "Klai" }]

# Runtime dependencies only. Each embedding service already pins concrete
# versions of minio/filetype/httpx/structlog; we express compatible lower
# bounds and let the embedder resolve.
dependencies = [
    "httpx>=0.28",
    "structlog>=25.0",
    "minio>=7.2",
    "filetype>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=1",
    "ruff>=0.8",
    "pyright>=1.1.390",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=1",
    "ruff>=0.8",
    "pyright>=1.1.390",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["klai_image_storage"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "RUF", "G", "LOG"]
ignore = [
    "S101",  # assert is fine in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S106"]  # test fixtures use fake tokens like "test-secret"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
