[project]
name = "klai-log-utils"
version = "0.1.0"
description = "Shared log/secret-handling utilities for Klai services (SPEC-SEC-INTERNAL-001)."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "Klai" }]

# Runtime dependencies. Each consumer service pins concrete versions of structlog;
# we express a compatible lower bound and let the embedder resolve.
dependencies = [
    "structlog>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.28",
    "ruff>=0.8",
    "pyright>=1.1.390",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.28",
    "ruff>=0.8",
    "pyright>=1.1.390",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["log_utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "RUF", "G", "LOG"]
ignore = [
    "S101",  # asserts are fine in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106"]  # test fixtures use literal fake secrets

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
