[project]
name = "klai-portal-api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136",
    "uvicorn[standard]>=0.44",
    "httpx>=0.28",
    "pydantic[email]>=2.13",
    "pydantic-settings>=2.13",
    "asyncpg>=0.31",
    "sqlalchemy[asyncio]>=2.0.49",
    "alembic>=1.18",
    "python-multipart>=0.0.26",
    "docker>=7.1",
    "cryptography>=46.0",
    "icalendar>=6.1.0,<8.0",
    "motor>=3.7",
    "prometheus-client>=0.25,<1.0",
    "pyyaml>=6.0.3",
    "structlog>=25.5",
    "redis[hiredis]>=7.4",
    "pyjwt>=2.12",
    "klai-connector-credentials",
    "klai-image-storage",
    # SPEC-SEC-IMAP-001: DKIM/SPF/ARC verification for the IMAP calendar listener.
    # MPL-2.0 license, pure Python, wraps dkimpy + authres.
    "authheaders>=0.16,<1.0",
    # SPEC-SEC-IMAP-001: RFC 7489 §3.1.1 organizational-domain alignment via
    # the Public Suffix List. Transitive via authheaders; pinned explicitly
    # because we import it directly in app/services/mail_auth.py.
    "publicsuffix2>=2.2,<3.0",
    # SPEC-SEC-HYGIENE-001 REQ-22: zxcvbn password-strength estimator.
    # MIT-licensed pure-Python port of Dropbox's zxcvbn; no native extensions.
    "zxcvbn>=4.5,<5.0",
]

[tool.uv.sources]
klai-connector-credentials = { path = "../../klai-libs/connector-credentials", editable = true }
klai-image-storage = { path = "../../klai-libs/image-storage", editable = true }
klai-identity-assert = { path = "../../klai-libs/identity-assert", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=9",
    "pytest-asyncio>=1",
    "httpx>=0.28",
    "respx>=0.22",
    "ruff>=0.15",
    "pyright>=1.1.408",
    # SPEC-SEC-IDENTITY-ASSERT-001: contract test exercises the real library
    # against the real /internal/identity/verify endpoint via ASGITransport.
    # Test-only dep — portal-api itself does not import the library
    # (portal-api SERVES the endpoint, doesn't call it).
    "klai-identity-assert",
]

[dependency-groups]
dev = [
    "pytest>=9",
    "pytest-asyncio>=1",
    "httpx>=0.28",
    "respx>=0.22",
    "ruff>=0.15",
    "pyright>=1.1.408",
    # SPEC-SEC-IDENTITY-ASSERT-001: contract test only — portal-api does not
    # import the library at runtime. Mirrors [project.optional-dependencies]
    # dev so both ``uv run pytest`` (CI, picks dependency-groups) and
    # ``uv pip install .[dev]`` (local) install it.
    "klai-identity-assert",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [".", "tests"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "C90", "B", "TRY", "S", "RUF", "G", "LOG"]
ignore = [
    "E501",    # line length — handled by formatter
    "B008",    # Depends() in default args — standard FastAPI pattern, not a bug
    "S101",    # assert is fine in tests
    "S105",    # hardcoded passwords — too many false positives on config defaults
    "TRY003",  # long exception messages — perfectly fine
    "TRY300",  # return in try block — common in FastAPI
    "TRY301",  # raise in try block — common in FastAPI
    "TRY401",  # {e} in logger.exception() call — we want that context
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["UP", "I", "E501"]  # auto-generated migrations, don't enforce style
# tests/*: hardcoded "passwords" in test fixtures are fake tokens —
# S105 already global-ignored, S106 covers module-level kwargs, S107
# covers function default arguments (e.g. token: str = "test-secret").
"tests/*" = ["S106", "S107"]
