[project]
name = "scribe-api"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "python-multipart>=0.0.12",
    "python-magic>=0.4",
    "pydub>=0.25",
    "structlog>=25.0",
    # SPEC-SEC-INTERNAL-001 REQ-4: shared sanitize_response_body helper used by
    # the transcription-service error log path so a reflected
    # KNOWLEDGE_INGEST_SECRET / litellm_master_key never lands in VictoriaLogs.
    "klai-log-utils",
    # SPEC-SEC-AUDIT-2026-04 B1: replace JWT resourceowner trust with portal
    # identity-verify. IdentityAsserter provides the canonical caller pattern
    # (60s LRU cache, fail-closed, structlog telemetry).
    "klai-identity-assert",
]

[tool.uv.sources]
klai-log-utils = { path = "../../klai-libs/log-utils", editable = true }
klai-identity-assert = { path = "../../klai-libs/identity-assert", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "RUF", "G", "LOG"]
ignore = [
    "S101",  # assert is fine in tests
    "S105",  # hardcoded passwords — too many false positives on config defaults
]
