[project]
name = "klai-portal-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "python-multipart>=0.0.12",
    "docker>=7.0",
    "cryptography>=43.0",
    "icalendar>=6.1.0,<7.0",
    "motor>=3.6",
    "structlog>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
    "pyright>=1.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
    "pyright>=1.1",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "C90", "B", "TRY", "S", "RUF", "G", "LOG"]
ignore = [
    "E501",    # line length — handled by formatter
    "B008",    # Depends() in default args — standard FastAPI pattern, not a bug
    "S101",    # assert is fine in tests
    "S105",    # hardcoded passwords — too many false positives on config defaults
    "TRY003",  # long exception messages — perfectly fine
    "TRY300",  # return in try block — common in FastAPI
    "TRY301",  # raise in try block — common in FastAPI
    "TRY401",  # {e} in logger.exception() call — we want that context
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["UP", "I", "E501"]  # auto-generated migrations, don't enforce style
